# Text-Editor

./: .gitignore  CMakeLists.txt  README.md  editor.cpp
